# e_commerce

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_utils_py.html
src/: 14.2_main.py  16.1_main.py  17.1_main.py  category.py  category_iter.py  mixin.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_category_iter.py  test_lawn_grass.py  test_product.py  test_smartphone.py  test_utils.py
